--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,6 +12,7 @@
  <div id="marginarticulo" class="jumbotron">
         
         <p><%= @post.articulo %></p>
+        <p><%= @post.category %></p>
       </div>
 
 <p>
