--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :articulo %><br>
     <%= f.text_field :articulo %>
   </div>
+  <div class="field">
+    <%= f.label :category %><br>
+    <%= f.text_field :category %>
+  </div>
   
   <div class="actions">
     <%= f.submit %>
