--- a/app/views/posts/reporte.html.erb
+++ b/app/views/posts/reporte.html.erb
@@ -4,7 +4,8 @@
     <tr>
       <th>ID</th>
       <th>Titulo</th>
-    
+
+      <th>category</th>
       
       <th>Fecha de Creacion</th>
       <th>Fecha de Modificacion</th>
@@ -12,7 +13,7 @@
       <th>Comentarios</th>
       <th>Likes</th>
      
-      <th colspan="7"></th>
+      <th colspan="8"></th>
     </tr>
   </thead>
 
@@ -21,6 +22,7 @@
       <tr>
         <td><%= post.id%></td>
         <td><%= post.titulo %></td>
+        <td><%= post.category %></td>
         <td><%= post.created_at %></td>
         <td><%= post.updated_at%></td>
         <td><%= post.articulo.split(' ').length%></td>
